--- a/Assets/InteractML/Data/Models/Position_XR_ML_IMLConfiguration55b065d2-1d6f-471b-92af-90dde885535e_Model.json
+++ b/Assets/InteractML/Data/Models/Position_XR_ML_IMLConfiguration55b065d2-1d6f-471b-92af-90dde885535e_Model.json
@@ -10,6 +10,15 @@
          "inputs-3",
          "inputs-1",
          "inputs-2",
+         "inputs-3",
+         "inputs-1",
+         "inputs-2",
+         "inputs-3",
+         "inputs-1",
+         "inputs-2",
+         "inputs-3",
+         "inputs-1",
+         "inputs-2",
          "inputs-3"
       ],
       "numInputs" : 3,
@@ -3713,6 +3722,15 @@
             }
          ],
          "inputNames" : [
+            "inputs-1",
+            "inputs-2",
+            "inputs-3",
+            "inputs-1",
+            "inputs-2",
+            "inputs-3",
+            "inputs-1",
+            "inputs-2",
+            "inputs-3",
             "inputs-1",
             "inputs-2",
             "inputs-3",
